# python_lab

./: .coverage  .gitignore  README.md  conf.py  coverage.py  coverage.xml  index.rst  pyproject.toml  python_lab.py  python_lab2_chapter2.py  python_lab_chapter3.py  python_lab_chapter4.py
.github/workflows/: ci.yml
checkio/: python_lab.py  python_lab2_chapter2.py  python_lab_chapter3.py  python_lab_chapter4.py
tests/: test.py  test_python_lab.py  test_python_lab2_chapter2.py  test_python_lab_chapter3.py  test_python_lab_chapter4.py
