[tool.poetry]
name = "checkio"
version = "0.1.0"
description = "Solutions to programming challenges on CheckiO"
authors = ["Hussein Tarhini <husseintarhini168@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
