[tool.poetry]
name = "checkio"
version = "0.1.0"
description = "Solutions to programming challenges on CheckiO"
authors = ["Hussein Tarhini <husseintarhini168@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.3.3"
pylint = "^3.3.1"

[tool.poetry.group.dev.dependencies]
coverage-badge = "^1.1.2"
pylint = "^3.3.1"
sphinx = "^8.0.2"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_paths = ["."]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
